--- a/CSS/magnum.css
+++ b/CSS/magnum.css
@@ -17,7 +17,9 @@ h1 {
 
 /* background */
 body{
-	background-color: #0099CC;
+	/*background-color: #0099CC;*/
+	background-image:url('H4.jpg');
+	/*background-image:url('gamegrumps.png');*/
 }
 
 /* column */
