--- a/Template/3-columns-3-topbanner.html
+++ b/Template/3-columns-3-topbanner.html
@@ -5,33 +5,33 @@
         <meta http-equiv="Content-Type" content="text/html charset=utf-8" />
         <link rel="stylesheet" title="magnum" type="text/css" href="../CSS/magnum.css" />
 		<link rel="alternate stylesheet" title="none" type="text/css" href="../CSS/empty.css.css" />	  
-        <title>Skriv namnet på sidan här!</title>	
+        <title>HUE</title>	
     </head>
     <body>
         <div id="content">
             <div id="top">
-               <div id="banner-left" >En banner till vänster?</div>
-               <div id="banner-center" >En banner till mitten??</div>
-               <div id="banner-right" >En banner till höger???</div>
+               <div id="banner-left" >HUEHUEHUE vänster?</div>
+               <div id="banner-center" >HUEHUEHUE mitten??</div>
+               <div id="banner-right" >HUEHUEHUE höger???</div>
             </div>
             <div id="left">
 					<div class="dokument-item">
-						Vänster kolumn!
+						Vänster HUE kolumn!
 					</div>
             </div>
             <div id="center">
-				Mitten kolumnen!!
+				Mitten HUE kolumnen!!
                 <div id="info">
-				<h1 class="dokument-item-header"> Webbsidans rubrik</h1>
-				<p class="info">Inledning på webbsidan.</p>
+				<h1 class="dokument-item-header"> Rubrik   HUEHUEHUEHUEHUEHUEHUE</h1>
+				<p class="info">Inledning på sidan   HUEHUEHUEHUEHUEHUEHUEHUEHUEHUEHUEHUEHUEHUEHUEHUEHUEHUEHUEHUEHUEHUEHUEHUEHUEHUEHUEHUEHUEHUEHUEHUEHUEHUEHUEHUEHUEHUEHUEHUEHUEHUEHUEHUEHUEHUEHUEHUEHUEHUE</p>
 </div>
 </div>
             <div id="right">
-					Höger kolumn!!!
+					Höger HUE kolumn!!!
             </div>
 
 			<div id="footer">
-				<p> &copy; 2013 Ditt namn här. Detta är en fotnot# 
+				<p> &copy; 2013 Ditt namn här HUE. Detta är en HUE fotnot# 
 				</p>
 			</div>
         </div>
