--- a/ProjektHemsida/CSS/magnum.css
+++ b/ProjektHemsida/CSS/magnum.css
@@ -157,6 +157,7 @@ body{
 	padding-bottom: 0px;
 	padding-right: 15px;
 	padding-left: 15px;
+	border-top-left-radius: 7px;
 }
 
 /* #right{
@@ -203,6 +204,7 @@ body{
     padding: 0;
     margin: 0;
     float: left;
+ 
  }
  
 .meny .horizontal {
@@ -213,8 +215,8 @@ body{
    padding: 0; 
    float: left; 
    width: 100%; 
-   background: #99CC99; 
-   font: 70% Verdana, Helvetica, sans-serif;
+   background: #e69500; 
+   font: 100% Century Gothic, Helvetica, sans-serif;
 }
 
 .meny li{
@@ -224,9 +226,11 @@ body{
 .meny ul a{
     float: left;
     text-decoration: none;
-    padding: 0.3em 2em;
-    border: 1px solid #99CC99;
-}
+	/*ändra padding på meny*/
+    padding: 1em 6.6em;
+    border: 1px solid #e69500;
+
+	}
     
 .meny a:link{
     color: #000000;
@@ -238,6 +242,7 @@ body{
 
 .meny a:hover{
     border: 1px solid #000000;
+	background: #FFA500;
 }
 
 .meny a#current{
@@ -248,6 +253,8 @@ body{
 .meny .vertical {
  
 }
+
+
  
 /***************************************
  * För nyhetslistan på första sidan
