--- a/ProjektHemsida/CSS/magnum.css
+++ b/ProjektHemsida/CSS/magnum.css
@@ -16,6 +16,9 @@ h1 {
 /***************************************
 * För menyer
 **************************************/
+
+
+
 .meny {
 padding: 0;
 margin: 0;
@@ -137,6 +140,7 @@ body{
 	margin-right: auto;
 	margin-left: auto;
 	border-radius: 7px;
+	
 }
 
 #left{
@@ -146,6 +150,8 @@ body{
 	padding-bottom: 0px;
 	padding-right: 5px;
 	padding-left: 5px;
+	/*border-radius: 30px;
+*/
 }
 
 #center{
